--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/sequelize": "^11.0.0",
+    "@nestjs/swagger": "^11.2.0",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
@@ -43,6 +44,7 @@
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.7",
     "sequelize-typescript": "^2.1.6",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0",
     "uuidv4": "^6.2.13"
   },
